<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rumah Siaga</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="title_home">Kontrol Lampu Rumah</string>
    <string name="Lamp_1">Lampu 1</string>
    <string name="Lamp_2">Lampu 2</string>
	<string name="Find_ppl">Temukan Seseorang</string> 
		<string name="informasi">Aplikasi Rumah Siaga merupakan aplikasi yang \n 
		    berfungsi untuk memantau kondisi rumah yang sudah di integrasikan dengan 
		    router dan Arduino 
		    Pemilik Rumah dapat mengetahui kondisi dengan streaming video ataupun berupa gambar 
		    Selain itu juga pemilik dapat mengetahui peringatan dini ketika sensor mendeteksi sebuah obyek diarea Rumah
		    </string>    
	
	<string name="Developed">Dikembangkan Oleh Poradan Labs</string>
	<string name="nama_pengembang">M.Halim Bimantara</string>
	<string name="penasihat">Rangga Bagus Wicaksoni</string>
	<string name="email_dev">bimadel6@gmail.com</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Report</item>
        <item >Logs</item>
        <!--<item >Pages</item>
        <item >What\'s Hot</item>-->
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
       <!--  <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>-->
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>
